2010-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Improve ext.test semantics, avoid OpenBSD sh errexit issue.
	* tests/ext.test: Inside shell compound command, use
	`if $cmd; then Exit 1; fi' rather than `$cmd && Exit 1', to
	fix failure with OpenBSD sh introduced with last patch.
	Actually ensure that a rule for .EXT.o is created for each
	known extension EXT.

2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Enable `errexit' shell flag in some test scripts.
	* tests/dash.test: Enable `errexit' shell flag, and related
	changes.
	* tests/defun.test: Likewise.
	* tests/defun2.test: Likewise.
	* tests/dejagnu.test: Likewise.
	* tests/double.test: Likewise.
	* tests/distcom2.test: Likewise.
	* tests/empty2.test: Likewise.
	* tests/empty3.test: Likewise.
	* tests/empty4.test: Likewise.
	* tests/exdir.test: Likewise.
	* tests/ext.test: Likewise.
	* tests/extra.test: Likewise.
	* tests/extra2.test: Likewise.
	* tests/extra3.test: Likewise.
	* tests/extra4.test: Likewise.
	* tests/flibs.test: Likewise.
	* tests/fnoc.test: Likewise.
	* tests/fo.test: Likewise.
	* tests/instexec.test: Likewise.
	* tests/ltdeps.test: Likewise.
	* tests/nodep.test: Likewise.
	* tests/nodepcomp.test: Likewise.
	* tests/f90only.test: Likewise, and remove botched/obsoleted
	comments and unecessary commands.
	* tests/fonly.test: Likewise, and removed botched/obsolted
	comments and unecessary commands.
	* tests/discover.test: Likewise, and made stricter.

	Enable `errexit' shell flag in all tests cxx*.test.
	* tests/cxx.test: Enabled `errexit' shell flag, and related
	minor changes.
	* tests/cxxansi.test: Likewise.
	* tests/cxxcpp.test: Likewise.
	* tests/cxxlibobj.test: Likewise.
	* tests/cxxlink.test: Likewise.
	* tests/cxxo.test: Likewise.

	Enable `errexit' shell flag in various tests.
	* tests/acoutnoq.test: Enabled `errexit' shell flag, and related
	minor changes.
	* tests/acoutpt.test: Likewise.
	* tests/acoutqnl.test: Likewise.
	* tests/amassign.test: Likewise.