@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -20,6 +20,8 @@
 
 . ./defs || Exit 1
 
+set -e
+
 cat >> configure.in << 'END'
 AC_PROG_CC
 AC_PROG_CXX
@@ -31,18 +33,14 @@ lavalamp_SOURCES = lava.c
 dist_lavalamp_SOURCES = lamp.cxx
 END
 
-: > lava.c
-: > lamp.cxx
-
-$ACLOCAL || Exit 1
-$AUTOMAKE || Exit 1
-
+$ACLOCAL
+$AUTOMAKE
 
 # We should only see the C++ linker in the rules of `Makefile.in'.
 
 # Look for this macro not at the beginning of any line; that will have
 # to be good enough for now.
-grep '.\$(CXXLINK)' Makefile.in  || Exit 1
+grep '.\$(CXXLINK)' Makefile.in
 
 # We should not see these patterns:
 grep '.\$(FLINK)' Makefile.in && Exit 1
