@@ -1,5 +1,6 @@
 #! /bin/sh
-# Copyright (C) 1998, 1999, 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 1998, 1999, 2001, 2002, 2010 Free Software Foundation,
+# Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,6 +20,8 @@
 
 . ./defs || Exit 1
 
+set -e
+
 cat >> configure.in << 'END'
 AC_PROG_CC
 AC_PROG_CXX
@@ -30,19 +33,14 @@ bin_PROGRAMS = lavalamp
 lavalamp_SOURCES = lava.c lamp.cxx lamp2.f
 END
 
-: > lava.c
-: > lamp.cxx
-: > lamp2.f
-
-$ACLOCAL || Exit 1
-$AUTOMAKE || Exit 1
-
+$ACLOCAL
+$AUTOMAKE
 
 # We should only see the C++ linker in the rules of `Makefile.in'.
 
 # Look for this macro not at the beginning of any line; that will have
 # to be good enough for now.
-grep '.\$(CXXLINK)' Makefile.in  || Exit 1
+grep '.\$(CXXLINK)' Makefile.in
 
 # We should not see these patterns:
 grep '.\$(F77LINK)' Makefile.in && Exit 1
