@@ -1,3 +1,15 @@
+2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Improve tests link*.test (enable `errexit' shell flag).
+	* tests/link_c_cxx.test: Enable `errexit shell flag, and related
+	changes.  Also, do not create useless source files.
+	* tests/link_dist.test: Likewise.
+	* tests/link_f90_only.test: Likewise.
+	* tests/link_f_only.test: Likewise.
+	* tests/link_fc.test: Likewise.
+	* tests/link_fccxx.test: Likewise.
+	* tests/link_fcxx.test: Likewise.
+
 2010-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Improve ext.test semantics, avoid OpenBSD sh errexit issue.
